[package]
name = "dummy-counter-executable"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-std = "1.0.0"
serde = { version = "1.0.127", default-features = false, features = ["derive"] }
schemars = "0.8.3"
cw-storage-plus = "0.13.2"
cw1 = "0.13.2"
cw2 = "0.13.2"
semver = "1"
cw-utils = "0.13.4"
thiserror = { version = "1.0.21" }
cosmwasm-schema = "1.0.0"

[dev-dependencies]
cw-multi-test = { version = "0.13.4" }