[package]
name = "andromeda-user-account"
version = "0.1.2"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-std = "1.0.0"
serde = { version = "1.0.127", default-features = false, features = ["derive"] }
schemars = "0.8.3"
cw-storage-plus = "0.13.2"
cw1 = "0.13.2"
cw2 = "0.13.2"
semver = "1"
cw-utils = "0.13.4"
thiserror = { version = "1.0.21" }

andromeda-modules = { version = "0.1.0", path = "../../../packages/andromeda-modules" }
andromeda-gatekeeper-spendlimit = { path = "../andromeda-gatekeeper-spendlimit" }
andromeda-gatekeeper-message = { path = "../andromeda-gatekeeper-message" }
andromeda-gatekeeper-sessionkey = { path = "../andromeda-gatekeeper-sessionkey" }
ado-base = { path = "../../../packages/ado-base", version = "0.1.0" }
common = { version = "0.1.0", path = "../../../packages/common" }
andromeda-unified-asset = { path = "../andromeda-unified-asset" }

[dev-dependencies]
cosmwasm-schema = "1.0.0"
cw-multi-test = { version = "0.13.4" }
andromeda-unified-asset = { path = "../andromeda-unified-asset" }
dummy-counter-executable = { path = "../dummy-counter-executable" }
dummy-price-contract = { path = "../dummy-price-contract" }
